-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b15
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8006483 | 8 | Daniel Daugherty | P4 | Closed | Fixed | b74 |
• “remove crufty '_g' support from HS runtime code”
Deal with the 7 runtime files here. these changes will need review by the Runtime team.
src/closed/cpu/ppc/vm/testSignatures_ppc.cpp
src/os/bsd/vm/os_bsd.cpp
src/os/linux/vm/os_linux.cpp
src/os/solaris/vm/os_solaris.cpp
src/os/windows/vm/os_windows.cpp
src/share/tools/ProjectCreator/ProjectCreator.java
Deal with the 7 runtime files here. these changes will need review by the Runtime team.
src/closed/cpu/ppc/vm/testSignatures_ppc.cpp
src/os/bsd/vm/os_bsd.cpp
src/os/linux/vm/os_linux.cpp
src/os/solaris/vm/os_solaris.cpp
src/os/windows/vm/os_windows.cpp
src/share/tools/ProjectCreator/ProjectCreator.java
- backported by
-
JDK-8006483 remove crufty '_g' support from HS runtime code
-
- Closed
-
- relates to
-
JDK-8005262 possible gamma launcher issues
-
- Closed
-
-
JDK-7153050 remove crufty '_g' support from HotSpot repo makefiles
-
- Resolved
-