8005044: remove crufty '_g' support from HS runtime code

Phase 2 is removing '_g' support from the Runtime code.

Reviewed-by: dcubed, coleenp, hseigel